[tool.poetry]
name = "brainfcloud"
version = "0.5.0"
description = ""
authors = ["rmksrv <rmksrv@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
uvicorn = "^0.18.3"
numpy = "^1.23.3"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
